--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -1,33 +1,16 @@
 <!doctype html>
 html(lang="en")
-    head    
 
-        meta(charset="utf-8")
-        meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
-        script(src="https://kit.fontawesome.com/48c583c2ee.js" crossorigin="anonymous")
-        link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css")
-        link(rel="stylesheet", href="/css/style.css")
-        block styles
-        title Add Product
+    include ../includes/head.pug
 
     body
-        nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.fixed-top
-            .container
-                a(href="/").navbar-brand Shopping
-                ul.navbar-nav.ml-auto
-                    li.nav-item
-                        a.nav-link(href="") Login
-                    li.nav-item
-                        a.nav-link(href="") Register
+        
+        include ../includes/navbar.pug
 
         .container.pt-100
             .row
                 .col-lg-3
-                    .list-group
-                        a(href="").list-group-item Category 1
-                        a(href="").list-group-item Category 2
-                        a(href="").list-group-item Category 3
-
+                    include ../includes/menu.pug  
                 .col-lg-9
 
                     block content
