--- a/views/mixins/createProduct.pug
+++ b/views/mixins/createProduct.pug
@@ -4,10 +4,12 @@ mixin createProduct(product)
             img(src=`/img/${product.imageUrl}` alt=`${product.name}`).card-img-top
             .card-body
                 h4.card-title
-                    a(href="#") #{product.name}
-                p.card-text.pt-2 #{product.description}
-            .card-footer
+                    a(href=`/products/${product.id}`) #{product.name}
+
                 small.text-muted
                     i.fa.fa-try #{product.price}
-                a(href="").btn.btn-secondary.btn-sm.float-right
-                    i.fa.fa-angle-double-right Details
+            .card-footer.text-center
+
+                a(href=`/products/${product.id}`).btn.btn-secondary.btn-sm Details
+                
+                a(href="#").btn.btn-secondary.btn-sm.ml-3 Add to Cart
