--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -4,5 +4,6 @@ head
         script(src="https://kit.fontawesome.com/48c583c2ee.js" crossorigin="anonymous")
         link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css")
         link(rel="stylesheet", href="/css/style.css")
+        link(rel="stylesheet", href="/css/forms.css")
         block styles
         title #{title}
