--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -7,20 +7,8 @@ html(lang="en")
         
         include ../includes/navbar.pug
 
-        .container.pt-100
-            .row
-                .col-lg-3
-                    include ../includes/menu.pug  
-                .col-lg-9
+        .container.pt-100.mb-5
+            block content
 
-                    block content
-
-
-            script(src="https://code.jquery.com/jquery-3.5.1.min.js")
-            script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js")
-
-
-
-            script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js") 
-            script(src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js")
-            script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js")
+        include ../includes/script
+            
